admin felület telefonok CRUD, cég törlés.

--- a/PhoneScoutAdmin/PhoneScoutAdmin.csproj
+++ b/PhoneScoutAdmin/PhoneScoutAdmin.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+    <Page Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="Images\PhoneScoutLogo.png" />
   </ItemGroup>
 
@@ -16,10 +23,6 @@
     <Content Include="Images\PhoneScoutLogo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
